 /* $Id: ChangeLog,v 1.944 2000-05-18 18:05:09 sandervl Exp $ */

 2000-05-18: Sander van Leeuwen <sandervl@xs4all.nl>
    - KERNEL32: EnumResourceNamesA bugfix (wrong length in UnicodeToAsciiN call)
                (reported by Michal Necasek)
                Call CheckLogException for each exception; safety guard against
                exceptions inside WriteLog.
    - WSOCK32:  Mark cancelled async select to avoid finding it before the
                thread removes itself from the queue
    - SHELL32:  Removed Path* functions; added forwarders to shlwapi.dll
    - SHLWAPI:  Merged path function with Wine 20000430 (shellpath.cpp)
                Added DllGetVersion export.
                Added SHCreateStdEnumFmtEtc, CIDLData_CreateFromIDArray, SHFindFiles
                SHFindComputer + other apis used by IE5 (stubs)
    - COMCTL32: Added export 389 (return 0 as in NT 4) & 390 (stub); IE5 needs them
                Added DPA_LoadStream & DPA_SaveStream (Wine port)

 2000-05-16: Sander van Leeuwen <sandervl@xs4all.nl>
    - COMDLG32: Fixed shlwapi imports (GetProcAddress failed for PathFindFileNameA
                -> crash when calling file dialog functions)

 2000-05-16: Jeroen van den Horn <J.vandenHorn@fibre.a2000.nl>
    - GDI32: Fixed bug in font.cpp
             iFontRename should use strncpy instead of memcpy since source
             string passed may be smaller than amount of bytes to copy
             resulting in GPF.

 2000-05-14: Przemyslaw Dobrowolski <dobrawka@asua.org.pl>
    - WNASPI32: Implemented working ASPI.

 2000-05-14: Patrick Haller <phaller@gmx.net>
    - SHLWAPI: finally separated SHELL32 and SHLWAPI, adjusted to NT4 functions and exports

 2000-05-13: knut st. osmundsen <knut.stange.osmundsen@mynd.no>
    - tools\common: Corrected makefiles.

 2000-05-12: Edgar Buerkle <Edgar.Buerkle@gmx.net>
    - KERNEL32: Print name of image referenced by EIP (stackdump)

 2000-05-12: Sander van Leeuwen <sandervl@xs4all.nl>